--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,6 +1,6 @@
 .cart-dropdown-container {
   position: absolute;
-  width: 240px;
+  width: 260px;
   height: 340px;
   display: flex;
   flex-direction: column;
@@ -20,10 +20,18 @@
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow: auto;
+    overflow-x: hidden;
+    
   }
+
+  .cart-items::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+
+}
 
   button {
     margin-top: auto;
+    padding: 0 34px 0 34px;
   }
 }
